; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/brcm80211/brcmsmac/extr_mac80211_if.c_brcms_tx_flush_completed.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/brcm80211/brcmsmac/extr_mac80211_if.c_brcms_tx_flush_completed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.brcms_info = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.brcms_info*)* @brcms_tx_flush_completed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @brcms_tx_flush_completed(%struct.brcms_info* %0) #0 {
  %2 = alloca %struct.brcms_info*, align 8
  %3 = alloca i32, align 4
  store %struct.brcms_info* %0, %struct.brcms_info** %2, align 8
  %4 = load %struct.brcms_info*, %struct.brcms_info** %2, align 8
  %5 = getelementptr inbounds %struct.brcms_info, %struct.brcms_info* %4, i32 0, i32 0
  %6 = call i32 @spin_lock_bh(i32* %5)
  %7 = load %struct.brcms_info*, %struct.brcms_info** %2, align 8
  %8 = getelementptr inbounds %struct.brcms_info, %struct.brcms_info* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @brcms_c_tx_flush_completed(i32 %9)
  store i32 %10, i32* %3, align 4
  %11 = load %struct.brcms_info*, %struct.brcms_info** %2, align 8
  %12 = getelementptr inbounds %struct.brcms_info, %struct.brcms_info* %11, i32 0, i32 0
  %13 = call i32 @spin_unlock_bh(i32* %12)
  %14 = load i32, i32* %3, align 4
  ret i32 %14
}

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i32 @brcms_c_tx_flush_completed(i32) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
